# mechanism_viewer

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
assets/css/: custom.css
diagnostics/: index.html
docs/: diagnostics.md  documentation.md  index.md  missing_mechanisms.md  workflow.md
docs/assets/css/: custom.css
documentation/: index.html
examples/: generate_misssing_data.ipynb  use_accuracy_mar.ipynb  use_little_test.ipynb  use_viewer_comparison.ipynb  use_viewer_correlation.ipynb  use_viewer_imputation.ipynb  use_viewer_matrix.ipynb  use_viewer_simple.ipynb  use_viewer_upset.ipynb
mechanism_viewer/: __init__.py  _random.py  _utils.py  _validation.py  accuracy_mar.py  column_data_types.py  dataset_generator.py  little_mcar.py  mcar_little_test.py  viewer_comparison.py  viewer_correlation.py  viewer_imputation.py  viewer_matrix.py  viewer_simple.py  viewer_upset.py
missing_mechanisms/: index.html
search/: search_index.json
tests_real_datasets/: cancer.ipynb  contraceptive.ipynb  diabetes.ipynb  horse.ipynb
use_cases/: cancer.ipynb  contraceptive.ipynb  diabetes.ipynb  horse.ipynb  student.ipynb
workflow/: index.html
