[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanism_viewer"
description = "Tools for diagnosing MCAR, MAR, and MNAR missing-data mechanisms with imputation visualization."
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10"
authors = [{ name = "Valentina Cadime" }]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pyampute"
]